--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>DuLow Customz</title>
 
     <style>
-      /* CSS Pur - se încarcă instant, înainte de Tailwind/React */
       body {
         margin: 0;
         background-color: #050407;
@@ -38,34 +37,30 @@
         align-items: center;
       }
 
-      /* Inelul galben care se rotește */
       .spinner {
         position: absolute;
-        width: 130px; /* Mai mare decât logo-ul pentru a lăsa spațiu */
+        width: 130px;
         height: 130px;
         border-radius: 50%;
-        border: 4px solid rgba(250, 204, 21, 0.1); /* Galben transparent */
-        border-top-color: #facc15; /* Galben solid (yellow-400) */
-        border-right-color: #facc15; /* Galben solid pentru efect mai dinamic */
+        border: 4px solid rgba(250, 204, 21, 0.1);
+        border-top-color: #facc15;
+        border-right-color: #facc15;
         animation: spin 1s linear infinite;
       }
 
-      /* Containerul pentru imaginea ta */
       .logo-container {
         width: 96px;
         height: 96px;
         border-radius: 50%;
-        /* border: 4px solid #facc15; Bordura galbenă */
-        overflow: hidden; /* Taie marginile imaginii ca să fie perfect rotundă */
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: 0px 0px 15px 10px rgba(250, 204, 21, 0.2); /* O umbră galbenă subtilă (glow) */
+        box-shadow: 0px 0px 15px 10px rgba(250, 204, 21, 0.2);
         position: relative;
         z-index: 10;
       }
 
-      /* Imaginea în sine */
       .logo-container img {
         width: 100%;
         height: 100%;
@@ -88,7 +83,7 @@
         <div class="loading-content">
           <div class="spinner"></div>
           <div class="logo-container">
-            <img src="/logo.jpg" alt="DuLow Customz Logo" />
+            <img src="./logo.jpg" alt="DuLow Customz Logo" />
           </div>
         </div>
       </div>
