--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="icon" type="image/jpeg" href="/logo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DuLow Customz</title>
@@ -83,7 +83,7 @@
         <div class="loading-content">
           <div class="spinner"></div>
           <div class="logo-container">
-            <img src="./logo.jpg" alt="DuLow Customz Logo" />
+            <img src="./logo.png" alt="DuLow Customz Logo" />
           </div>
         </div>
       </div>
